--- a/codigo/CMakeLists.txt
+++ b/codigo/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library(Common INTERFACE)
 
 target_include_directories(Common INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
 
-target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_pwm hardware_gpio hardware_i2c hardware_pio Common hardware_adc)
+target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_pwm hardware_gpio hardware_i2c hardware_pio hardware_rtc Common hardware_adc)
 
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
 pico_enable_stdio_uart(${PROJECT_NAME} 1)
